--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -26,20 +26,21 @@
         text-decoration: none;
         color: white;
         margin-right: 54px;
-
+        position: relative;
 
         .logo {
           font-family: 'ProximaNova-Extrabold';
           font-size: 32px;
           font-weight: bold;
           position: relative;
-
-          &::before {
-            content: url('../../assets/img/borvo-logo-white.svg');
-            position: absolute;
-            left: -40px;
-            top: -16px;
-          }
+        }
+        
+        svg {
+          fill: white;
+          position: absolute;
+          left: -37px;
+          top: 50%;
+          transform: translateY(-50%)
         }
       }
       nav {
@@ -141,21 +142,18 @@
   }
 }
 
+.fixed-header {
+  position: fixed;
+  left: 0;
+  right: 0;
+  overflow-x: hidden;
+  z-index: 2;
+}
+
 .bg-neural {
     background: $bgColor;
   a {
     color: white;
-
-    .logo {
-
-      &::before {
-        content: url('../../assets/img/borvo-logo-white.svg');
-        position: absolute;
-        left: -35px;
-        top: 0px;
-      }
-      
-    }
   }
 }
 
@@ -180,7 +178,7 @@
 }
 @media only screen and (max-width: 855px){
   .header {
-    padding-left: 25px;
+    padding-left: 50px;
     .header-container {
       div {
         a {
