--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,6 +27,6 @@
     top: 0; bottom: 0;
     left: 0; right: 0;
 }
-.switch-color {
-    color: black !important;   
+.mix-blend-mode {
+    mix-blend-mode: exclusion;
 }
