--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,7 +5,6 @@
   padding-right: 25px;
   padding-left: 25px;
   overflow-y: hidden;
-  mix-blend-mode: exclusion;
 
   &-container{
     width: 1360px;
@@ -148,12 +147,13 @@
   left: 0;
   right: 0;
   overflow-x: hidden;
+  background: transparent;
   z-index: 2;
+  background: transparent !important;
 }
 
 .bg-neural {
-    // background: $bgColor;
-    background: transparent;
+    background: $bgColor;
   a {
     color: white;
   }
