--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,7 +23,8 @@
     transition: opacity .5s !important;
 }
 .open-pop-up {
-    position: fixed;
+    position: absolute;
     top: 0; bottom: 0;
     left: 0; right: 0;
+    mix-blend-mode: inherit;
 }
