--- a/docs/style.css
+++ b/docs/style.css
@@ -711,16 +711,18 @@ footer .bottom-page {
           transition: transform .6s , opacity 1.5s; }
         .works .works-container .bg-gradient .text-about-work .project {
           position: absolute;
-          top: 15px;
-          left: -150px;
-          border-style: solid;
-          border-width: 2px;
-          border-image-source: linear-gradient(109deg, #7878e5, #d07868);
-          border-image-slice: 1;
-          padding: 10px 25px;
+          top: 30px;
+          left: -130px;
           color: #a878a1;
           font-size: 24px;
-          pointer-events: none; }
+          pointer-events: none;
+          font-weight: bold;
+          display: inline-block; }
+          .works .works-container .bg-gradient .text-about-work .project::before {
+            content: url(427ecf95b6e76ca4125b8faf4afff150.svg);
+            position: absolute;
+            top: -59%;
+            left: -38px; }
         .works .works-container .bg-gradient .text-about-work span {
           font-size: 24px; }
         .works .works-container .bg-gradient .text-about-work h1 {
