--- a/src/styles/works.scss
+++ b/src/styles/works.scss
@@ -63,16 +63,20 @@
 
                 .project {
                     position: absolute;
-                    top: 15px;
-                    left: -150px;
-                    border-style: solid;
-                    border-width: 2px;
-                    border-image-source: linear-gradient(109deg, #7878e5, #d07868);
-                    border-image-slice: 1;
-                    padding: 10px 25px;
+                    top: 30px;
+                    left: -130px;
                     color: #a878a1;
                     font-size: 24px;
                     pointer-events: none;
+                    font-weight: bold;
+                    display: inline-block;
+
+                    &::before {
+                        content: url('../../assets/img/flag-neural.svg');
+                        position: absolute;
+                        top: -59%;
+                        left: -38px;
+                    }
                 }
 
                 span {
