add header => like DropBox

--- a/src/styles/AI.scss
+++ b/src/styles/AI.scss
@@ -8,6 +8,7 @@
     pointer-events: none;
     padding-left: 50px;
     z-index: 3;
+    position: relative;
 
    &-container{
        width: 1360px;
