--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -89,6 +89,7 @@
         padding-top: 100px;
         padding-bottom: 90px;
         border-top: 1px solid rgba(255, 255, 255, 0.1);
+        position: relative;
 
         .message-container {
             width: 1360px;
