--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,9 +10,11 @@
 @import "mixins";
 //        //
 
-// routing //
-@import 'container-careers-vacancies';
-//         //
+// themes-header  //
+
+@import 'themes-header';
+
+//                //
 
 // elements of page //
 @import "header";
@@ -21,6 +23,7 @@
 @import 'AI';
 @import "scroll-section";
 @import 'works';
+@import 'top-page-block';
 //                 //
 
 // pages // 
