--- a/docs/style.css
+++ b/docs/style.css
@@ -46,22 +46,57 @@
   font-family: 'Montserrat Medium';
   src: url(a98626e1aef6ceba5dfc1ee7112e235a.ttf); }
 
-.container-careers-vacancies .careers-vacancies-enter {
-  opacity: 0;
+.white-theme,
+.black-theme,
+.blue-theme {
   position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
-  right: 0; }
-  .container-careers-vacancies .careers-vacancies-enter.careers-vacancies-enter-active {
-    transition: opacity .5s;
-    opacity: 1;
-    transition-delay: .15s; }
+  clip: rect(auto, auto, auto, auto);
+  pointer-events: none;
+  z-index: 2; }
 
-.container-careers-vacancies .careers-vacancies-exit {
-  opacity: 1; }
-  .container-careers-vacancies .careers-vacancies-exit.careers-vacancies-exit-active {
-    opacity: 0;
-    transition: opacity .5s;
-    transition-delay: .15s; }
+.container-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 0;
+  z-index: 99;
+  pointer-events: all;
+  transform: translateZ(0);
+  backface-visibility: hidden;
+  will-change: transform;
+  perspective: 1000; }
+
+.blue-theme .container-header {
+  background: #2159f4; }
+  .blue-theme .container-header * > a {
+    color: white; }
+  .blue-theme .container-header button {
+    background: white;
+    color: #2979ff; }
+
+.white-theme .container-header {
+  background: white; }
+  .white-theme .container-header * > svg {
+    fill: black; }
+    .white-theme .container-header * > svg .layer {
+      fill: black; }
+  .white-theme .container-header * > a {
+    color: black; }
+
+.black-theme .container-header {
+  background: #0d0f1c; }
+  .black-theme .container-header svg {
+    fill: white; }
+  .black-theme .container-header a {
+    color: white; }
+
+.z-index {
+  z-index: 99; }
 
 .header {
   display: flex;
@@ -169,19 +204,8 @@
     top: 75px;
     z-index: 5; }
 
-.fixed-header {
-  position: fixed;
-  left: 0;
-  right: 0;
-  overflow-x: hidden;
-  z-index: 2;
-  background: transparent !important;
-  mix-blend-mode: exclusion; }
-
-.bg-neural {
-  background: #0d0f1c; }
-  .bg-neural a {
-    color: white; }
+.bg-neural a {
+  color: white; }
 
 .bg-about-us .line {
   background: white;
@@ -356,55 +380,56 @@
     text-align: center;
     font-size: 60px; } }
 
-footer .footer {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  border-top: 1px solid #f5f5f5;
-  padding-bottom: 70px;
-  padding-left: 50px;
-  padding-right: 50px; }
-  footer .footer .container {
-    width: 1360px;
+footer {
+  position: relative; }
+  footer .footer {
+    position: relative;
     display: flex;
-    justify-content: space-between;
-    margin-top: 40px; }
-    footer .footer .container div {
-      padding: 0 30px; }
-      footer .footer .container div h2 {
-        margin-bottom: 10px;
-        font-size: 15px;
-        font-family: 'Montserrat ExtraBold'; }
-      footer .footer .container div p {
-        font-size: 15px;
-        line-height: 1.7;
-        color: #424242;
-        margin-bottom: 15px; }
-      footer .footer .container div .list {
-        color: #424242; }
-        footer .footer .container div .list li + li {
-          margin-top: 30px; }
-    footer .footer .container .footer-logo {
-      height: 30px;
-      width: 140px; }
-
-footer .bottom-page {
-  display: flex;
-  justify-content: center;
-  border-top: 1px solid #f5f5f5;
-  padding-top: 10px;
-  padding-bottom: 5px; }
-  footer .bottom-page .container {
-    width: 1360px;
-    display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    border-top: 1px solid #f5f5f5;
+    padding-bottom: 70px;
     padding-left: 50px;
     padding-right: 50px; }
-    footer .bottom-page .container .social-network img + img {
-      margin-left: 20px; }
-    footer .bottom-page .container span {
-      font-size: 13px;
-      color: #3b3f42; }
+    footer .footer .container {
+      width: 1360px;
+      display: flex;
+      justify-content: space-between;
+      margin-top: 40px; }
+      footer .footer .container div {
+        padding: 0 30px; }
+        footer .footer .container div h2 {
+          margin-bottom: 10px;
+          font-size: 15px;
+          font-family: 'Montserrat ExtraBold'; }
+        footer .footer .container div p {
+          font-size: 15px;
+          line-height: 1.7;
+          color: #424242;
+          margin-bottom: 15px; }
+        footer .footer .container div .list {
+          color: #424242; }
+          footer .footer .container div .list li + li {
+            margin-top: 30px; }
+      footer .footer .container .footer-logo {
+        height: 30px;
+        width: 140px; }
+  footer .bottom-page {
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid #f5f5f5;
+    padding-top: 10px;
+    padding-bottom: 5px; }
+    footer .bottom-page .container {
+      width: 1360px;
+      display: flex;
+      justify-content: space-between;
+      padding-left: 50px;
+      padding-right: 50px; }
+      footer .bottom-page .container .social-network img + img {
+        margin-left: 20px; }
+      footer .bottom-page .container span {
+        font-size: 13px;
+        color: #3b3f42; }
 
 @media only screen and (max-width: 1000px) {
   footer .footer .container .footer-logo {
@@ -446,7 +471,8 @@ footer .bottom-page {
   position: relative;
   pointer-events: none;
   padding-left: 50px;
-  z-index: 3; }
+  z-index: 3;
+  position: relative; }
   .AI-container {
     width: 1360px; }
     .AI-container .pulsatingCircle {
@@ -663,7 +689,8 @@ footer .bottom-page {
   overflow: hidden;
   display: flex;
   justify-content: center;
-  background: #0d0f1c; }
+  background: #0d0f1c;
+  position: relative; }
   .works .blue-block {
     position: absolute;
     top: 0;
@@ -794,6 +821,117 @@ footer .bottom-page {
       width: 15px;
       height: 10px; } }
 
+.top-block {
+  min-height: 580px;
+  height: 400px;
+  transition: min-height .5s;
+  background-color: #0d0f1c;
+  overflow: hidden; }
+  .top-block .container-vacancy {
+    width: 1360px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 100px;
+    padding-bottom: 30px; }
+    .top-block .container-vacancy .return {
+      max-width: 250px;
+      display: flex;
+      align-items: center;
+      color: #d77860;
+      font-size: 20px;
+      text-decoration: none; }
+      .top-block .container-vacancy .return img {
+        padding-right: 15px; }
+    .top-block .container-vacancy h1 {
+      font-family: 'Montserrat SemiBold';
+      font-size: 64px; }
+    .top-block .container-vacancy .block {
+      display: flex;
+      align-items: center; }
+      .top-block .container-vacancy .block .location {
+        padding-left: 10px;
+        padding-right: 10px;
+        color: #bdbdbd; }
+      .top-block .container-vacancy .block .position {
+        color: #2962ff; }
+
+.top-page {
+  color: white;
+  display: flex;
+  justify-content: center; }
+  .top-page .containe-careers {
+    width: 1360px;
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 50px;
+    padding-right: 50px;
+    transition: height .5s; }
+    .top-page .containe-careers .text {
+      padding: 130px 0; }
+      .top-page .containe-careers .text h1 {
+        max-width: 900px;
+        font-size: 72px;
+        font-family: 'Montserrat SemiBold'; }
+      .top-page .containe-careers .text p {
+        max-width: 730px;
+        font-size: 20px;
+        line-height: 1.6;
+        color: #bdbdbd;
+        padding-top: 50px; }
+
+@media only screen and (max-width: 1000px) {
+  .top-block .containe-careers .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0; } }
+
+@media only screen and (max-width: 900px) {
+  .top-block {
+    min-height: 500px;
+    height: 340px; }
+    .top-block .containe-careers .text h1 {
+      font-size: 50px; }
+    .top-block .containe-careers .text p {
+      font-size: 16px; } }
+
+@media only screen and (max-width: 600px) {
+  .top-block .container-vacancy .return {
+    font-size: 13px; }
+    .top-block .container-vacancy .return img {
+      width: 18px; }
+  .top-block .container-vacancy h1 {
+    font-size: 30px; }
+  .top-block .container-vacancy .block {
+    font-size: 11px; }
+    .top-block .container-vacancy .block img {
+      width: 11px; } }
+
+@media only screen and (max-width: 566px) {
+  .top-block {
+    min-height: 410px;
+    height: 300px; }
+    .top-block .containe-careers .text h1 {
+      font-size: 35px; }
+    .top-block .containe-careers .text p {
+      font-size: 14px; } }
+
+@media only screen and (max-width: 445px) {
+  .top-block .containe-careers .text h1 {
+    font-size: 29px; }
+  .top-block .containe-careers .text p {
+    font-size: 12px; } }
+
+.shrink {
+  min-height: 380px; }
+
+@media only screen and (max-width: 566px) {
+  .shrink {
+    min-height: 300px; } }
+
 .home {
   color: #ffffff;
   background-color: #0d0f1c;
@@ -873,7 +1011,8 @@ footer .bottom-page {
     padding-top: 120px;
     padding-bottom: 120px;
     padding-left: 50px;
-    padding-right: 50px; }
+    padding-right: 50px;
+    position: relative; }
     .neural .description-borvo .container-description {
       width: 1360px;
       display: flex;
@@ -913,7 +1052,8 @@ footer .bottom-page {
     background-color: #0d0f1c;
     color: white;
     padding-top: 150px;
-    padding-bottom: 30px; }
+    padding-bottom: 30px;
+    position: relative; }
     .neural .reviews .container {
       position: relative; }
       .neural .reviews .container .bg-word-review {
@@ -1044,7 +1184,8 @@ footer .bottom-page {
     background-color: #0d0f1c;
     color: white;
     overflow: hidden;
-    height: 0; }
+    height: 0;
+    position: relative; }
     .neural .all-reviews.show-all {
       height: 100%; }
     .neural .all-reviews .container > div {
@@ -1059,7 +1200,7 @@ footer .bottom-page {
       .neural .all-reviews .container .second-review .video-or-img {
         justify-self: center;
         transition: transform .3s;
-        z-index: 999; }
+        z-index: 1; }
         .neural .all-reviews .container .third-review .video-or-img > img,
         .neural .all-reviews .container .second-review .video-or-img > img {
           width: 100%;
@@ -1130,6 +1271,7 @@ footer .bottom-page {
     align-items: center;
     padding-top: 115px;
     padding-bottom: 90px;
+    position: relative;
     padding-left: 50px;
     padding-right: 50px; }
     .neural .skills .technology {
@@ -1167,12 +1309,12 @@ footer .bottom-page {
           margin: 0 auto;
           margin-bottom: 20px; }
   .neural .section-vacancies {
+    position: relative;
     display: flex;
     justify-content: center;
     background: #2159f4;
     color: white;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 70px 0;
     padding-left: 50px;
     padding-right: 50px; }
     .neural .section-vacancies .container-vacancies {
@@ -1381,7 +1523,8 @@ footer .bottom-page {
   padding-bottom: 145px;
   padding-top: 15vh;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  position: relative; }
   .section-services .cards-services {
     width: 1360px;
     padding-left: 30px;
@@ -1409,6 +1552,10 @@ footer .bottom-page {
     opacity: 0;
     display: block; } }
 
+@media only screen and (max-width: 1066px) {
+  .section-services .cards-services .card-services:last-child {
+    display: none; } }
+
 @media only screen and (max-width: 768px) {
   .section-services .cards-services {
     padding: 0 30px;
@@ -1425,18 +1572,16 @@ footer .bottom-page {
 
 .services-provided {
   overflow-x: hidden; }
-  .services-provided header {
-    background: #000;
-    color: white; }
   .services-provided .application {
     display: flex;
     justify-content: center;
-    background: #000;
+    background: #0d0f1c;
     color: white;
     padding-top: 95px;
     padding-bottom: 65px;
     padding-left: 30px;
-    padding-right: 30px; }
+    padding-right: 30px;
+    position: relative; }
     .services-provided .application-container {
       width: 1360px;
       display: flex;
@@ -1453,7 +1598,8 @@ footer .bottom-page {
     display: flex;
     justify-content: center;
     padding-right: 30px;
-    padding-left: 30px; }
+    padding-left: 30px;
+    position: relative; }
     .services-provided .about-applications .container {
       width: 1360px;
       padding-top: 135px;
@@ -1534,7 +1680,8 @@ footer .bottom-page {
   background-position: top;
   background-color: black;
   margin-top: -78px;
-  display: flex; }
+  display: flex;
+  position: relative; }
   .about-us .bg-photo .text-gradient {
     width: 100%;
     display: flex;
@@ -1565,7 +1712,8 @@ footer .bottom-page {
   justify-content: center;
   background-color: #0d0f1c;
   color: white;
-  padding-bottom: 110px; }
+  padding-bottom: 110px;
+  position: relative; }
   .about-us .three-columns .container-columns {
     width: 1360px;
     display: flex;
@@ -1590,7 +1738,8 @@ footer .bottom-page {
 .about-us .white-text-section {
   display: flex;
   justify-content: center;
-  padding: 0 30px; }
+  padding: 0 30px;
+  position: relative; }
   .about-us .white-text-section .container {
     padding-top: 125px;
     width: 1360px;
@@ -1769,7 +1918,8 @@ footer .bottom-page {
   overflow-y: auto;
   padding-top: 100px;
   padding-bottom: 90px;
-  border-top: 1px solid rgba(255, 255, 255, 0.1); }
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  position: relative; }
   .contacts .message .message-container {
     width: 1360px;
     padding-left: 50px;
@@ -1917,38 +2067,12 @@ footer .bottom-page {
     font-size: 30px;
     text-align: center; } }
 
-.careers .top-page {
-  color: white;
-  display: flex;
-  justify-content: center;
-  padding-top: 110px;
-  padding-bottom: 110px;
-  background: url(d039f76040d7467c40d0922a3290c761.png) no-repeat;
-  background-position: 85% 50%;
-  background-size: 481px;
-  background-color: #0d0f1c; }
-  .careers .top-page .container {
-    width: 1360px;
-    display: flex;
-    justify-content: flex-start;
-    padding-left: 50px;
-    padding-right: 50px; }
-    .careers .top-page .container .text h1 {
-      max-width: 900px;
-      font-size: 72px;
-      font-family: 'Montserrat SemiBold'; }
-    .careers .top-page .container .text p {
-      max-width: 730px;
-      font-size: 20px;
-      line-height: 1.6;
-      color: #bdbdbd;
-      padding-top: 50px; }
-
 .careers .white-vacancies {
   display: flex;
   justify-content: center;
   padding-top: 50px;
-  padding-bottom: 80px; }
+  padding-bottom: 80px;
+  position: relative; }
   .careers .white-vacancies .container {
     width: 1360px;
     display: grid;
@@ -2013,48 +2137,12 @@ footer .bottom-page {
   .careers .white-vacancies .container {
     grid-template-columns: 1fr; } }
 
-.vacancies .top-block {
-  background-color: #0d0f1c;
-  color: white;
-  display: flex;
-  justify-content: center;
-  padding-top: 55px;
-  padding-bottom: 55px; }
-  .vacancies .top-block .container {
-    width: 1360px;
-    height: 390px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-left: 50px;
-    padding-right: 50px; }
-    .vacancies .top-block .container .return {
-      max-width: 250px;
-      display: flex;
-      align-items: center;
-      color: #d77860;
-      font-size: 20px;
-      text-decoration: none; }
-      .vacancies .top-block .container .return img {
-        padding-right: 15px; }
-    .vacancies .top-block .container h1 {
-      font-family: 'Montserrat SemiBold';
-      font-size: 64px; }
-    .vacancies .top-block .container .block {
-      display: flex;
-      align-items: center; }
-      .vacancies .top-block .container .block .location {
-        padding-left: 10px;
-        padding-right: 10px;
-        color: #bdbdbd; }
-      .vacancies .top-block .container .block .position {
-        color: #2962ff; }
-
 .vacancies .description {
   display: flex;
   justify-content: center;
   padding-top: 85px;
-  padding-bottom: 110px; }
+  padding-bottom: 110px;
+  position: relative; }
   .vacancies .description .container {
     width: 1360px;
     display: flex;
@@ -2125,3 +2213,9 @@ footer .bottom-page {
   left: 0;
   right: 0;
   mix-blend-mode: inherit; }
+
+.render {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0; }
