--- a/src/styles/about-us.scss
+++ b/src/styles/about-us.scss
@@ -9,7 +9,7 @@
         background-color: black;
         margin-top: -78px;
         display: flex;
-        
+        position: relative;
 
         .text-gradient {
             width: 100%;
@@ -47,6 +47,7 @@
         background-color: $bgColor;
         color: white;
         padding-bottom: 110px;
+        position: relative;
 
         .container-columns {
             width: 1360px;
@@ -78,6 +79,7 @@
         display: flex;
         justify-content: center;
         padding: 0 30px;
+        position: relative;
 
         .container {
             padding-top: 125px;
