--- a/src/styles/experties.scss
+++ b/src/styles/experties.scss
@@ -1,20 +1,16 @@
 .services-provided {
     overflow-x: hidden;
-    
-    header {
-        background: #000;
-        color: white;
-    }
-    
+
     .application {
         display: flex;
         justify-content: center;
-        background: #000;
+        background: $bgColor;
         color: white;
         padding-top: 95px;
         padding-bottom: 65px;
         padding-left: 30px;
         padding-right: 30px;
+        position: relative;
 
         &-container {
             width: 1360px;
@@ -44,6 +40,7 @@
         justify-content: center;
         padding-right: 30px;
         padding-left: 30px;
+        position: relative;
 
         .container {
             width: 1360px;
