--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -28,3 +28,11 @@
     left: 0; right: 0;
     mix-blend-mode: inherit;
 }
+
+.render {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+}
