--- a/src/styles/neural.scss
+++ b/src/styles/neural.scss
@@ -13,6 +13,7 @@
         padding-top: 120px;
         padding-bottom: 120px;
         @include padding-both;
+        position: relative;
 
         .container-description {
             width: 1360px;
@@ -68,7 +69,9 @@
         color: white;
         padding-top: 150px;
         padding-bottom: 30px;
+        position: relative;
         
+
         .container {
             position: relative;
 
@@ -148,7 +151,6 @@
                         background-image: linear-gradient($bgColor, $bgColor), radial-gradient(circle at top left, #7578e6,#d7775f);
                         background-origin: border-box;
                         background-clip: content-box, border-box;
-
 
                         span {
                             color: white;
@@ -247,6 +249,7 @@
         color: white;
         overflow: hidden;
         height: 0;
+        position: relative;
 
 
         &.show-all {
@@ -267,7 +270,7 @@
                 .video-or-img {
                     justify-self: center;
                     transition: transform .3s;
-                    z-index: 999;
+                    z-index: 1;
     
                         > img {
                             width: 100%;
@@ -374,6 +377,7 @@
         align-items: center;
         padding-top: 115px;
         padding-bottom: 90px;
+        position: relative;
         @include padding-both;
         
         .technology {
@@ -423,12 +427,12 @@
         }
     }
     .section-vacancies {
+        position: relative;
         display: flex;
         justify-content: center;
         background: #2159f4;
         color: white;
-        padding-top: 50px;
-        padding-bottom: 50px;
+        padding: 70px 0;
         @include padding-both;
 
         .container-vacancies {
