--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -3,6 +3,7 @@
     padding-top: 15vh;
     display: flex;
     justify-content: center;
+    position: relative;
 
     .cards-services {
         width: 1360px;
@@ -46,11 +47,22 @@
     }
 }
 
+@media only screen and (max-width: 1066px) {
+    .section-services {
+        .cards-services {
+            .card-services:last-child {
+                display: none;
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .section-services {
         .cards-services {
             padding: 0 30px;
             justify-content: center;
+            
             .card-services {
                 margin-left: 0;
             }
