--- a/src/styles/works.scss
+++ b/src/styles/works.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     background: $bgColor;
+    position: relative;
 
     .blue-block {
         position: absolute;
