add mobile burger-menu

--- a/docs/style.css
+++ b/docs/style.css
@@ -157,32 +157,11 @@
           .header-container > div nav ul li a:hover {
             color: #2979ff;
             transition: color .2s; }
-      .header-container > div nav.mobile {
-        width: 140px;
-        display: flex;
-        background: rgba(255, 255, 255, 0.623);
-        position: absolute;
-        right: 50px;
-        top: 50px;
-        border-radius: 25px;
-        z-index: 999;
-        display: none; }
-        .header-container > div nav.mobile ul {
-          width: 100%;
-          flex-direction: column;
-          font-size: 24px; }
-          .header-container > div nav.mobile ul li + li {
-            margin: 0; }
-          .header-container > div nav.mobile ul li a {
-            height: 50px;
-            line-height: 50px;
-            display: flex;
-            justify-content: center;
-            color: black; }
     .header-container .burger-icon {
       width: 30px;
       margin-right: 25px;
-      display: none; }
+      display: none;
+      cursor: pointer; }
       .header-container .burger-icon .layer {
         fill: white; }
     .header-container button {
@@ -379,6 +358,56 @@
   .pop-up .pop-up-container h1 {
     text-align: center;
     font-size: 60px; } }
+
+.mobile {
+  width: 240px;
+  min-height: 100vh;
+  background: #1f212d;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 999;
+  overflow: hidden; }
+  .mobile .close {
+    position: fixed;
+    fill: white;
+    width: 15px;
+    top: 25px;
+    right: 25px;
+    cursor: pointer; }
+  .mobile ul {
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    font-size: 16px; }
+    .mobile ul li + li {
+      margin: 0; }
+    .mobile ul li a {
+      height: 55px;
+      line-height: 55px;
+      padding-right: 80px;
+      display: flex;
+      justify-content: center;
+      color: white;
+      text-decoration: none;
+      transition: color .2s; }
+      .mobile ul li a:hover {
+        color: #2962ff;
+        transition: color .2s; }
+
+.show-menu {
+  display: flex;
+  transform: translateX(0);
+  transition: transform .3s; }
+
+.hide-menu {
+  transform: translateX(255px);
+  transition: transform .3s; }
+
+.current-link {
+  color: #2962ff !important; }
 
 footer {
   position: relative; }
@@ -649,7 +678,8 @@ footer {
     display: flex;
     justify-content: center;
     margin-top: 120px;
-    margin-bottom: 150px; }
+    margin-bottom: 150px;
+    overflow-x: hidden; }
     .scroll-section .cards {
       flex-direction: column;
       padding: 0;
@@ -664,7 +694,9 @@ footer {
         .scroll-section .cards .card-home img {
           margin: 0; }
         .scroll-section .cards .card-home div {
-          margin: 50px 0 0px 0; } }
+          margin: 50px 0 0px 0; }
+      .scroll-section .cards .borvo {
+        display: none; } }
 
 @media only screen and (max-width: 425px) {
   .scroll-section .cards {
@@ -870,7 +902,7 @@ footer {
     padding-right: 50px;
     transition: height .5s; }
     .top-page .containe-careers .text {
-      padding: 130px 0; }
+      padding: 150px 0; }
       .top-page .containe-careers .text h1 {
         max-width: 900px;
         font-size: 72px;
@@ -914,15 +946,18 @@ footer {
   .top-block {
     min-height: 410px;
     height: 300px; }
-    .top-block .containe-careers .text h1 {
-      font-size: 35px; }
-    .top-block .containe-careers .text p {
-      font-size: 14px; } }
+    .top-block .containe-careers {
+      padding-top: 50px; }
+      .top-block .containe-careers .text h1 {
+        font-size: 35px; }
+      .top-block .containe-careers .text p {
+        font-size: 14px; } }
 
 @media only screen and (max-width: 445px) {
   .top-block .containe-careers .text h1 {
     font-size: 29px; }
   .top-block .containe-careers .text p {
+    padding-top: 25px;
     font-size: 12px; } }
 
 .shrink {
@@ -1538,19 +1573,18 @@ footer {
       flex-direction: column;
       font-size: 20px;
       padding: 0 20px;
-      flex: 1 1 290px; }
+      flex: 1 1 320px; }
       .section-services .cards-services .card-services:last-child {
-        display: none; }
+        display: block; }
       .section-services .cards-services .card-services > img {
         width: 100%; }
       .section-services .cards-services .card-services > span {
         margin-top: 50px;
         margin-bottom: 50px; }
 
-@media only screen and (max-width: 1395px) {
+@media only screen and (max-width: 1155px) {
   .section-services .cards-services .card-services:last-child {
-    opacity: 0;
-    display: block; } }
+    display: none; } }
 
 @media only screen and (max-width: 1066px) {
   .section-services .cards-services .card-services:last-child {
@@ -1568,7 +1602,9 @@ footer {
     padding-left: 30px;
     padding-right: 30px; }
     .section-services .cards-services .card-services {
-      width: auto; } }
+      width: auto;
+      padding-left: 0;
+      padding-right: 0; } }
 
 .services-provided {
   overflow-x: hidden; }
@@ -1738,7 +1774,7 @@ footer {
 .about-us .white-text-section {
   display: flex;
   justify-content: center;
-  padding: 0 30px;
+  padding: 30px 30px;
   position: relative; }
   .about-us .white-text-section .container {
     padding-top: 125px;
@@ -1810,7 +1846,7 @@ footer {
       flex-direction: column;
       align-items: center; } }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   .about-us .bg-photo .text-gradient .text > p {
     font-size: 40px; }
   .about-us .bg-photo .text-gradient .text small {
@@ -1845,6 +1881,12 @@ footer {
   .about-us .leadership .container .team .person .name-position small {
     font-size: 13px; } }
 
+@media only screen and (max-width: 400px) {
+  .about-us .bg-photo .text-gradient .text > p {
+    font-size: 32px; }
+  .about-us .bg-photo .text-gradient .text small {
+    font-size: 15px; } }
+
 .contacts .map-bg {
   width: 100%;
   height: 760px;
@@ -1862,7 +1904,8 @@ footer {
     flex-direction: column;
     justify-content: space-between;
     padding-left: 50px;
-    padding-right: 50px; }
+    padding-right: 50px;
+    padding-top: 50px; }
     .contacts .map-bg .container h1 {
       font-size: 64px;
       font-family: 'Montserrat SemiBold'; }
