--- a/src/styles/about-us.scss
+++ b/src/styles/about-us.scss
@@ -78,7 +78,7 @@
     .white-text-section {
         display: flex;
         justify-content: center;
-        padding: 0 30px;
+        padding: 30px 30px;
         position: relative;
 
         .container {
@@ -152,6 +152,7 @@
     }
 }
 
+
 @media only screen and (max-width: 930px) {
     .about-us {
         .three-columns {
@@ -179,7 +180,7 @@
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     .about-us {
         .bg-photo {
             .text-gradient {
@@ -265,6 +266,23 @@
                                 font-size: 13px;
                             }
                         }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .about-us {
+        .bg-photo {
+            .text-gradient {
+                .text {
+                    > p {
+                        font-size: 32px;
+                    }
+                    small {
+                        font-size: 15px;
                     }
                 }
             }
