--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,19 +11,18 @@
 //        //
 
 // themes-header  //
-
 @import 'themes-header';
-
 //                //
 
 // elements of page //
 @import "header";
 @import 'get-in-touch';
+@import 'burgerMenu';
 @import "footer";
 @import 'AI';
 @import "scroll-section";
 @import 'works';
-@import 'top-page-block';
+@import 'top-block-and-top-page';
 //                 //
 
 // pages // 
