--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -79,42 +79,13 @@
             }
           }
         }
-        &.mobile{
-          width: 140px;
-          display: flex;
-          background: rgba(255, 255, 255, 0.623);
-          position: absolute;
-          right: 50px;
-          top: 50px;
-          border-radius: 25px;
-          z-index: 999;
-          display: none;
-          ul{
-            width: 100%;
-            flex-direction: column;
-            font-size: 24px;
-  
-            li{
-  
-              &+li{
-                margin: 0;
-              }
-              a{
-                height: 50px;
-                line-height: 50px;
-                display: flex;
-                justify-content: center;
-                color: black;
-              }
-            }
-          }
-        }
       }
     }
     .burger-icon {
       width: 30px;
       margin-right: 25px;
       display: none;
+      cursor: pointer;
       .layer{
         fill: white;
       }
