--- a/src/styles/scroll-section.scss
+++ b/src/styles/scroll-section.scss
@@ -131,6 +131,7 @@
     }
   }
 }
+
 @media only screen and (max-width: 768px){
   .scroll-section{
     height: auto;
@@ -138,7 +139,8 @@
     justify-content: center;
     margin-top: 120px;
     margin-bottom: 150px;
-    
+    overflow-x: hidden;
+
     .cards{
       flex-direction: column;
       padding: 0;
@@ -160,6 +162,9 @@
         div{
           margin: 50px 0 0px 0;
         }
+      }
+      .borvo {
+        display: none;
       }
     }
   }
