--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -1,4 +1,6 @@
 .contacts {    
+    position: relative;
+
     .map-bg {
         width: 100%;
         height: 760px;
@@ -146,7 +148,6 @@
                         margin-top: 60px;
                         position: relative;
                         label {
-                            z-index: 10;
                             position: absolute;
                             input {
                                 width: 900px;
@@ -290,19 +291,19 @@
     .contacts {
         .map-bg {
             padding-top: 80px;
-            padding-bottom: 80px;
 
             .container {
                 height: auto;
-
+                
                 h1 {
                     text-align: center;
-                    font-size: 45px;
+                    font-size: 27px;
                 }
 
                 .cities {
-                    padding-top: 70px;
+                    padding-top: 30px;
                     flex-direction: column;
+                    padding-bottom: 80px;
                     
                     .block {
                         padding: 0;
